--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- From Uiverse.io by alexruix -->
-<div>  </div>
+<div> modifed  </div>
     <header>
         <a href="#hero">
             <img src="/img/logo2.png" alt="Your Logo" class="logo">
